--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.7.2
-Django==5.0
+Django==4.2
 django-neomodel==0.1.1
 neo4j==5.12.0
 neobolt==1.7.17
 neomodel==5.1.2
+psycopg==3.1.18
+psycopg-binary==3.1.18
 pytz==2024.1
 six==1.16.0
 sqlparse==0.4.4
